# agent-buttercup

./: .gitignore  .gitmodules  Cargo.toml  README.md  bind.sh  foundry.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
binder/: Cargo.toml
binder/src/: main.rs  multi_metadata.rs
contracts/arbiter/contracts/: ArbiterMath.sol  ArbiterToken.sol  LiquidExchange.sol  writer.sol
crates/binder/: Cargo.toml
crates/binder/src/: main.rs  multi_metadata.rs  utils.rs
crates/bindings/: Cargo.toml
crates/bindings/src/: lib.rs
crates/bindings/src/cozy_models/: base_model_factory.rs  cost_model_area_calculations_lib.rs  cost_model_dynamic_level.rs  cost_model_dynamic_level_factory.rs  cost_model_jump_rate.rs  cost_model_jump_rate_factory.rs  create_2.rs  drip_decay_model_constant.rs  drip_decay_model_constant_factory.rs  exponential_decay.rs  fixed_point_math_lib.rs  i_cost_model.rs  i_drip_decay_model.rs  metadata.rs
crates/bindings/src/cozy_protocol/: asset_depositer.rs  asset_redeemer.rs  asset_storage.rs  backstop.rs  clones.rs  configs.rs  configurator.rs  configurator_lib.rs  cozy_math.rs  cozy_router.rs  delay_lib.rs  demand_side_lib.rs  deposit.rs  exponential_decay_lib.rs  fee_dripper.rs  fixed_point_math_lib.rs  governable.rs  i_asset_depositer_errors.rs  i_asset_depositer_events.rs  i_asset_redeemer_errors.rs  i_asset_redeemer_events.rs  i_backstop.rs  i_backstop_events.rs  i_common_errors.rs  i_common_events.rs  i_connector.rs  (+59 more)
crates/onchain/: Cargo.toml
crates/simulate/: Cargo.toml
crates/simulate/src/: address.rs  agent.rs  block_time_policy.rs  errors.rs  lib.rs  manager.rs  sim_env_data.rs  stepper.rs  summarizer.rs  time_policy.rs  u256.rs  utils.rs
crates/simulate/src/agent/: agent.rs  agent_channel.rs  mod.rs  types.rs
crates/simulate/src/contract/: NOTICE  errors.rs  mod.rs  sim_contract.rs  utils.rs
crates/simulate/src/environment/: sim_env.rs
crates/simulate/src/state/: errors.rs  mod.rs  update.rs  world.rs  world_state.rs
crates/simulate/src/summarizer/: mod.rs
crates/simulations/: Cargo.toml
crates/simulations/benches/: cozy_benchmark.rs
crates/simulations/src/: lib.rs  main.rs
crates/simulations/src/cozy/: bindings_utils.rs  bindings_wrapper.rs  configs.rs  constants.rs  decay_normalizer.rs  deploy_utils.rs  distributions.rs  mod.rs  runner.rs  set_risk_model.rs  sim_types.rs  types.rs  utils.rs  world.rs  world_contracts.rs  world_state.rs
crates/simulations/src/cozy/agents/: active_buyer.rs  altruistic_supplier.rs  arbitrageur.rs  buyer.rs  cost_models_deployer.rs  drip_decay_models_deployer.rs  errors.rs  mod.rs  passive_buyer.rs  passive_supplier.rs  protocol_deployer.rs  set_admin.rs  set_analyzer.rs  supplier.rs  token_deployer.rs  trigger_admin.rs  triggers_deployer.rs  weth_deployer.rs
crates/simulations/src/cozy/analysis/: base.rs  cost_model_analysis.rs  cost_models.rs  mod.rs  pricing_experiment.rs
crates/simulations/src/cozy/configs/: base.yaml  base_token.yaml  buyers_and_suppliers.yaml  fixed_time_policy.yaml  protocol_deploy_params.yaml  set_config_params.yaml  sim_setup.yaml
crates/simulations/src/cozy/configs/base/: agents.yaml  cost_models.yaml  set_config_params.yaml  time_policy_params.yaml  trigger_risk_params.yaml
crates/simulations/src/cozy/configs/cost_model_analysis/: misspecification_analysis.yaml
crates/simulations/src/cozy/configs/cost_model_analysis/dynamic_level_model/: dynamic_level_cost_model.yaml  market_config_params.yaml  triggers.yaml
crates/simulations/src/cozy/configs/cost_model_analysis/jump_rate_model/: agents.yaml  drip_decay_models.yaml  jump_rate_cost_model.yaml
crates/simulations/src/cozy/configs/cost_models_analysis/: agents.yaml  cost_models.yaml
crates/simulations/src/cozy/configs/pricing_experiment/: decay_analysis.yaml  demand_scenarios_analysis.yaml  growth_rate_analysis.yaml  kink_location_analysis.yaml  width_analysis.yaml
crates/simulations/src/cozy/configs/pricing_experiment/base/: agents.yaml  drip_decay_models.yaml  time_policy_params.yaml  triggers.yaml
crates/simulations/src/cozy/configs/test/: agents.yaml  base_override.yaml  config_params.yaml  cost_models.yaml  drip_decay_models.yaml  market_config_params.yaml  models.yaml  set_config_params.yaml  time_policy_params.yaml  trigger_risk_params.yaml  triggers.yaml
crates/simulations/src/cozy/statistics/: mod.rs  mvbernoulli.rs  mvbeta.rs  mvnormal.rs  wishart.rs
crates/simulations/src/cozy/summary_generators/: cost_models_summary.rs  mod.rs  pricing_experiment_summary.rs  set_summary.rs
edited_abis/Manager.edited.sol/: Manager.json
lib/abigen/: Cargo.toml
lib/abigen/src/: main.rs
lib/binder/: Cargo.toml
lib/binder/src/: main.rs  multi_raw_abis.rs  utils.rs
lib/bindings/src/: aggregator_v3_interface.rs  arbiter_math.rs  arbiter_token.rs  assembly_lib.rs  asset_depositer.rs  asset_redeemer.rs  babylonian.rs  backstop.rs  base_model_factory.rs  bit_math.rs  chainlink_trigger.rs  chainlink_trigger_factory.rs  clones.rs  configs.rs  configurator.rs  configurator_lib.rs  cost_model_area_calculations_lib.rs  cost_model_dynamic_level.rs  cost_model_dynamic_level_factory.rs  cost_model_jump_rate.rs  cost_model_jump_rate_factory.rs  cozy_math.rs  cozy_router.rs  create_2.rs  deflating_erc20.rs  delay_lib.rs  demand_side_lib.rs  drip_decay_model_constant.rs  drip_decay_model_constant_factory.rs  dummy_trigger.rs  echidna_erc20.rs  example_compute_liquidity_value.rs  example_flash_swap.rs  example_oracle_simple.rs  example_sliding_window_oracle.rs  example_swap_to_price.rs  exponential_decay_lib.rs  fee_on_transfer_token.rs  fixed_point.rs  fixed_point_128.rs  (+93 more)
lib/simulate/: Cargo.toml
lib/simulate/src/: agent.rs  block_time_policy.rs  contract.rs  lib.rs  manager.rs  sim_env_data.rs  utils.rs
src/: main.rs
src/simulate/: mod.rs
src/simulate/cozy/: chronos_actions.rs  cozy_passive_buyer_actions.rs  cozy_passive_supplier_actions.rs  cozy_set_admin_actions.rs  mod.rs  startup.rs
src/simulator/: mod.rs
src/simulator/cozy/: bindings_wrapper.rs  deploy_utils.rs  mod.rs  sim_types.rs
(+196 files in other folders)
