[workspace.package]
version = "0.2.0"
edition = "2021"

[workspace]
members = [
    "crates/binder",
    "crates/bindings",
    "crates/simulate",
    "crates/simulations",
]

[workspace.dependencies]
binder = { path = "./crates/binder" }
bindings = { path = "./crates/bindings" }
simulate = { path = "./crates/simulate" }
simulations = { path = "./crates/simulations" }

# Error handling
thiserror = "1.0.40"
anyhow = "1.0.7"

# External
tokio = { version = "1.28.1", features = [
    "macros",
    "full"
]}
clap = { version = "3.1.0", features = ["derive"] }
serde = { version = "1.0.163", features =["derive"] }
serde_json = "1"
toml = "0.8.8"
itertools-num = "0.1.3"
rand = "0.8.5"
lazy_static = "1.4.0"

# revm and related
revm = "3.3.0"
bytes = "1.4.0"
hex = { version = "0.4.3", default-features = false, features = ["serde"] }
ruint = "1.8.0"

# ethers 
ethers = { version = "2", default-features = false, features = ["abigen"] }
ethers-contract = "2.0.7"
ethers-solc = "2.0.7"

# Simulation
crossbeam-channel = "0.5.8"

# Release profile
[profile.release]
# Link-Time Optimization can inprove runtime at cost of build time
lto = true
# The Rust compiler splits your crate into multiple codegen units to parallelize (and thus speed up) compilation but at the cost of optimization. 
# This setting tells the compiler to use only one codegen unit, which will slow down compilation but improve optimization.
codegen-units = 1