[package]
name = "binder"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
eyre.workspace = true
hex.workspace = true
bytes.workspace = true

ethers-solc = "2.0.7"
ethers-contract = "2.0.7"
dunce = "1.0.0"
regex = "1"
proc-macro2 = "1"
quote = "1"
walkdir = "2"
serde_json = "1"
syn = "2"
prettyplease = "0.2"