[package]
name = "binder"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
eyre.workspace = true
hex.workspace = true
bytes.workspace = true
serde_json.workspace = true

ethers-contract.workspace = true
ethers-solc.workspace = true

dunce = "1.0.0"
regex = "1"
proc-macro2 = "1"
quote = "1"
walkdir = "2"
syn = "2"
prettyplease = "0.2"