[package]
name = "onchain"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal

# External
ethers.workspace = true
tokio.workspace = true
eyre.workspace = true
serde.workspace = true
toml.workspace = true
csv.workspace = true
serde_json.workspace = true

url = { version = "2.3.1", default-features = false }
futures = "0.3.28"
