[package]
name = "simulate"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes.workspace = true
eyre.workspace = true
thiserror.workspace = true
rand.workspace = true
crossbeam-channel.workspace = true
serde.workspace = true
hex.workspace = true
csv.workspace = true
serde_json.workspace = true

ethers.workspace = true
ethers-solc.workspace = true
revm.workspace = true

# price_simulation
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
plotly = "0.8.3"

# void_middleware
async-trait = "0.1.68"

# stepper concurrency primitives
left-right = "0.11.5"
crossbeam-utils = "0.8.1"