[package]
name = "simulate"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes.workspace = true
eyre.workspace = true
thiserror.workspace = true
rand.workspace = true
crossbeam-channel.workspace = true
serde.workspace = true
hex.workspace = true
serde_json.workspace = true

ethers.workspace = true
ethers-solc.workspace = true
revm.workspace = true

# void_middleware
async-trait = "0.1.68"

# stepper concurrency primitives
crossbeam-utils = "0.8.1"

# logging
log = "0.4"
rustc-hex = "2.1.0"

auto_impl = "1.1.0"
rayon = "1.7.0"
