[package]
name = "simulations"
version = "0.2.0"
edition = "2021"

[dependencies]
onchain.workspace = true
simulate.workspace = true
bindings.workspace = true

ethers.workspace = true
ethers-contract.workspace = true
revm.workspace = true

thiserror.workspace = true
eyre.workspace = true
rand.workspace = true

crossbeam-channel.workspace = true
serde.workspace = true

lazy_static = "1.4.0"

# Logging
flexi_logger = "0.25"
log = "0.4"

# Binary Command Line Args
clap = { workspace = true, features = ["derive"] }
config = "0.13.3"
dunce = "1.0.4"

# Distributions
rand_distr = "0.4.3"
num-traits = "0.2.15"
auto_impl = "1.1.0"
