[package]
name = "simulations"
version = "0.2.0"
edition = "2021"

[dependencies]
simulate.workspace = true
bindings.workspace = true

ethers.workspace = true
ethers-contract.workspace = true
revm.workspace = true

thiserror.workspace = true
anyhow.workspace = true
rand.workspace = true

crossbeam-channel.workspace = true
serde.workspace = true

lazy_static = "1.4.0"

# Logging
flexi_logger = "0.25"
log = "0.4.20"

# Binary Command Line Args
clap = { workspace = true, features = ["derive"] }
config = "0.13.3"
dunce = "1.0.4"

# Statistics
statrs = "0.16"
nalgebra = { version = "0.32", features = ["rand", "serde-serialize"] }
primes = "0.3.0"
argmin = "0.8.1"
ordered-float = "3.9.1"
rand_distr = "0.4.3"
num-traits = "0.2.15"
auto_impl = "1.1.0"

# Serialization
serde_json = "1.0.96"
hex = { version = "0.4", features = ["serde"] }

# Time
chrono = "0.4.26"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "cozy_benchmark"
harness = false