[package]
name = "binder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2", default-features = false, features = ["abigen"] }
serde_json = "1.0"
ethers-solc = { git = "https://github.com/gakonst/ethers-rs" }
ethers-contract = { git = "https://github.com/gakonst/ethers-rs" }
dunce = "1.0.4"
eyre = "0.6.8"
hex = "0.4"
proc-macro2 = "1.0.59"
quote = "1.0"
toml = "0.7.4"
syn = "2.0"
Inflector = "0.11"
prettyplease = "0.2"
walkdir = "2.3.3"
bytes = "1.4.0"
clap = {version = "4.3.1", features = ["derive"]}
regex = "1"
